--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.mat-card-header-text {
+    margin: 0;
+}
+
+.mat-button-wrapper .mat-icon.material-icons {
+    font-size: 14px;
+    height: 14px;
+    width: 14px;
+}
