--- a/src/app/customer-list/customer-list.component.html
+++ b/src/app/customer-list/customer-list.component.html
@@ -6,9 +6,9 @@
                 <mat-icon class="justify-content-end">edit</mat-icon>
             </mat-card-header>
             <mat-card-content class="mb-4">
-                <div class="d-flex flex-start">
+                <div class="d-flex flex-start align-items-center">
                     <div class="mr-3">
-                        <img mat-card-avatar src="https://image.flaticon.com/icons/svg/27/27304.svg">
+                        <mat-icon>person</mat-icon>
                     </div>
                     <div>
                         <p class="mb-0">{{ customer.address }}</p>
