--- a/src/app/customer-list/customer-list.component.css
+++ b/src/app/customer-list/customer-list.component.css
@@ -1,5 +1,14 @@
 .mat-card {
-    width: 230px;
+    width: 215px;
+}
+
+.mat-card .mat-card-content .mat-icon {
+    width: 50px;
+    height: 50px;
+}
+
+.mat-card .mat-card-content .material-icons {
+    font-size: 50px;
 }
 
 .mat-card-header {
