--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,11 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 .mat-card-header-text {
-    margin: 0;
+    margin-left: 0 !important;
 }
 
 .mat-button-wrapper .mat-icon.material-icons {
-    font-size: 14px;
-    height: 14px;
-    width: 14px;
+    font-size: 15px;
+    height: 15px;
+    width: 15px;
 }
