--- a/src/app/customer-list/customer-list.component.css
+++ b/src/app/customer-list/customer-list.component.css
@@ -19,3 +19,16 @@
 a {
     cursor: pointer;
 }
+
+.mat-card-header .mat-card-header-text {
+    margin: 0;
+}
+
+._main-header .mat-icon {
+    height: 30px;
+    width: 30px;
+}
+
+._main-header .mat-icon.material-icons {
+    font-size: 30px;
+}
