Added view orders dialog component

--- a/src/app/customer-list/customer-list.component.html
+++ b/src/app/customer-list/customer-list.component.html
@@ -25,7 +25,7 @@
                     </div>
                     <div>
                         <p class="mb-0">{{ customer.address }}</p>
-                        <a (click)="openEditCustomerDialog()" style="color:dodgerblue">View Orders</a>
+                        <a (click)="openViewOrdersDialog()" style="color:dodgerblue">View Orders</a>
                     </div>
                 </div>
             </mat-card-content>
