--- a/src/app/customer-list/view-orders-dialog/view-orders-dialog.component.html
+++ b/src/app/customer-list/view-orders-dialog/view-orders-dialog.component.html
@@ -16,7 +16,6 @@
         </mat-form-field> -->
     </div>
     <div mat-dialog-actions class="justify-content-end p-2">
-      <button mat-button (click)="onCancel()">Cancel</button>
-      <button mat-button (click)="onSave()" cdkFocusInitial type="submit">Save</button>
+      <button mat-button (click)="onClose()">Close</button>
     </div>
 </div>
