--- a/src/app/customer-list/customer-list.component.html
+++ b/src/app/customer-list/customer-list.component.html
@@ -4,8 +4,8 @@
         <span>Customers</span>
     </mat-toolbar-row>
     <mat-toolbar-row class="d-flex">
-        <button mat-button routerLink="/customer-list" routerLinkActive="active" class="pl-0"><mat-icon>dashboard</mat-icon>Card View</button>
-        <button mat-button routerLink="/add-customer" (click)="openAddCustomerDialog()"><mat-icon>add</mat-icon>New Customer</button>
+        <button mat-button class="pl-0"><mat-icon>dashboard</mat-icon>Card View</button>
+        <button mat-button (click)="openAddCustomerDialog()"><mat-icon>add</mat-icon>New Customer</button>
         <mat-form-field class="ml-auto">
             <input matInput [(ngModel)]="filter" placeholder="Filter" style="font-size: 14px;">
         </mat-form-field>
@@ -16,7 +16,7 @@
         <mat-card class="p-0">
             <mat-card-header color="primary" class="d-flex justify-content-between rounded-top p-1">
                 <mat-card-title class="mb-0">{{ customer.name }}</mat-card-title>
-                <mat-icon class="justify-content-end" routerLink="/edit-customer/{{ customer.id }}" (click)="openEditCustomerDialog(customer)" style="cursor: pointer;">edit</mat-icon>
+                <mat-icon class="justify-content-end" (click)="openEditCustomerDialog(customer)" style="cursor: pointer;">edit</mat-icon>
             </mat-card-header>
             <mat-card-content class="p-2">
                 <div class="d-flex flex-start align-items-center">
@@ -25,7 +25,7 @@
                     </div>
                     <div>
                         <p class="mb-0">{{ customer.address }}</p>
-                        <a (click)="openViewOrdersDialog()" style="color:dodgerblue">View Orders</a>
+                        <a (click)="openViewOrdersDialog(customer)" style="color:dodgerblue">View Orders</a>
                     </div>
                 </div>
             </mat-card-content>
